[gd_scene load_steps=20 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://Mur.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Control.tscn" type="PackedScene" id=4]
[ext_resource path="res://tiles.tres" type="TileSet" id=5]
[ext_resource path="res://play_but_1_select.png" type="Texture" id=6]
[ext_resource path="res://play_but_2_select.png" type="Texture" id=7]
[ext_resource path="res://play_but_1.png" type="Texture" id=8]
[ext_resource path="res://play_but_2.png" type="Texture" id=9]
[ext_resource path="res://quit_but_1_select.png" type="Texture" id=10]
[ext_resource path="res://quit_but_2_select.png" type="Texture" id=11]
[ext_resource path="res://quit_but_1.png" type="Texture" id=12]
[ext_resource path="res://quit_but_2.png" type="Texture" id=13]
[ext_resource path="res://logo.png" type="Texture" id=14]
[ext_resource path="res://logo_2.png" type="Texture" id=15]

[sub_resource type="Theme" id=1]


[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "selected",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "selected",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]

animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Menu" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="Murs" type="Node" parent="." index="0"]

editor/display_folded = true

[node name="Mur0" parent="Murs" index="0" instance=ExtResource( 2 )]

position = Vector2( 160, 544 )

[node name="Mur1" parent="Murs" index="1" instance=ExtResource( 2 )]

position = Vector2( 480, 544 )

[node name="Mur2" parent="Murs" index="2" instance=ExtResource( 2 )]

position = Vector2( 32, 416 )

[node name="Mur8" parent="Murs" index="3" instance=ExtResource( 2 )]

position = Vector2( -32, 288 )

[node name="Mur9" parent="Murs" index="4" instance=ExtResource( 2 )]

position = Vector2( 35.7012, 167.403 )

[node name="Mur10" parent="Murs" index="5" instance=ExtResource( 2 )]

position = Vector2( 163.701, 32 )

[node name="Mur11" parent="Murs" index="6" instance=ExtResource( 2 )]

position = Vector2( 384, -96 )

[node name="Mur12" parent="Murs" index="7" instance=ExtResource( 2 )]

position = Vector2( 704, -96 )

[node name="Mur3" parent="Murs" index="8" instance=ExtResource( 2 )]

position = Vector2( 800, 544 )

[node name="Mur4" parent="Murs" index="9" instance=ExtResource( 2 )]

position = Vector2( 960, 416 )

[node name="Mur5" parent="Murs" index="10" instance=ExtResource( 2 )]

position = Vector2( 1120, 288 )

[node name="Mur6" parent="Murs" index="11" instance=ExtResource( 2 )]

position = Vector2( 992, 160 )

[node name="Mur7" parent="Murs" index="12" instance=ExtResource( 2 )]

position = Vector2( 864, 32 )

[node name="Player" parent="." index="1" instance=ExtResource( 3 )]

position = Vector2( 416, 448 )

[node name="Control" parent="." index="2" instance=ExtResource( 4 )]

[node name="TileMap" type="TileMap" parent="." index="3"]

mode = 0
tile_set = ExtResource( 5 )
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray(  )

[node name="TileMap2" type="TileMap" parent="." index="4"]

mode = 0
tile_set = ExtResource( 5 )
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray(  )

[node name="Start" type="Button" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 239.0
margin_top = 289.0
margin_right = 385.0
margin_bottom = 362.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = " "
flat = true
align = 1
_sections_unfolded = [ "Theme" ]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Start" index="0"]

position = Vector2( 116.903, 53.823 )
scale = Vector2( 0.187888, 0.18594 )
frames = SubResource( 2 )
animation = "default"
frame = 1
playing = true
__meta__ = {
"_edit_group_": true
}

[node name="Exit" type="Button" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 640.0
margin_top = 293.0
margin_right = 793.0
margin_bottom = 365.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Exit"
flat = true
align = 1
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Exit" index="0"]

position = Vector2( 111.597, 49.5764 )
scale = Vector2( 0.174206, 0.18022 )
frames = SubResource( 3 )
animation = "default"
frame = 1
playing = true
__meta__ = {
"_edit_group_": true
}

[node name="Title" type="Label" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 466.0
margin_top = 110.0
margin_right = 557.0
margin_bottom = 124.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AnimatedSprite" type="AnimatedSprite" parent="Title" index="0"]

position = Vector2( 137.609, 126.58 )
scale = Vector2( 0.254248, 0.254248 )
z_index = -3
frames = SubResource( 4 )
animation = "default"
frame = 1
playing = true
_sections_unfolded = [ "Z Index" ]

[connection signal="mouse_entered" from="Start" to="." method="_on_Start_mouse_entered"]

[connection signal="mouse_exited" from="Start" to="." method="_on_Start_mouse_exited"]

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]

[connection signal="mouse_entered" from="Exit" to="." method="_on_Exit_mouse_entered"]

[connection signal="mouse_exited" from="Exit" to="." method="_on_Exit_mouse_exited"]

[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]


